# dbtb

./: .rubocop.yml  Cargo.toml  Gemfile  LICENSE  README.md
config/: dbtb.yml
lib/: cli.rb  dbtb.rb
lib/commands/: check.rb  create.rb  delete.rb  global_options.rb  help.rb  search.rb  sync.rb  version.rb
lib/dbtb/: version.rb
lib/dbtb/helpers/: command_helper.rb
src/: cli.rs  env.rs  errors.rs  lib.rs  main.rs
src/config/: database.rs
src/config/database/: connection.rs  defaults.rs  dialect.rs
src/std/: mod.rs  result.rs  string.rs
