[package]
name = "dbtb"
version = "0.0.1"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_builder = "4.5"
colored = "3.1"
constcat = "0.6"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tiberius = "0.12"

[dev-dependencies]
rstest = "0.26"
rstest_reuse = "0.7"
rxpect = "0.8"
